@@ -16,6 +16,8 @@ mlr_new:
 - fixed a bug in irace tuning interface with unamed discrete values
 - Fixed bugs in "jackknife" and "bootstrap" se estimators for regr.randomForest.
 - Added "sd" estimator for regr.randomForest.
+- Fixed a mini bug in ModelMultiplexer where hyperpars that are only need in
+  predict were not passed down correctly
 
 - API changes
 -- listLearners now returns a data frame with properties of the learners if
